--- a/themes/jeo-theme/assets/scss/5-pages/_p-single.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-single.scss
@@ -280,6 +280,7 @@
                     color: white;
                     padding: 25px 0;
                     cursor: pointer;
+                    opacity: 0.7;
                 }
             }
         }
